--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 public/assets/audio/** filter=lfs diff=lfs merge=lfs -text
 public/assets/avatars/** filter=lfs diff=lfs merge=lfs -text
 public/assets/scenes/** filter=lfs diff=lfs merge=lfs -text
+bin/ffmpeg.exe filter=lfs diff=lfs merge=lfs -text
