--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
   "name": "afw-frontend",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "engines": {
+    "node": ">=22 <23"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --strictPort --port 5173"
+    "preview": "vite preview --strictPort --port 5173",
+    "start": "vite preview --strictPort --port 5173",
+    "clean": "rimraf dist .vercel/output || true"
   },
-  "engines": {
-    "node": ">=22 <23",
-    "npm": ">=10"
-  },
-  "packageManager": "npm@10",
   "dependencies": {
-    "@supabase/supabase-js": "^2.56.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vercel/node": "^5.3.17",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.4.0",
+    "typescript": "^5.5.4",
     "vite": "^5.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
