--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,19 @@
   "short_name": "AFW",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0a0c10",
-  "theme_color": "#0a0c10",
-  "description": "A sacred, therapeutic, cinematic space for inner healing and reflection.",
+  "background_color": "#081015",
+  "theme_color": "#081015",
   "icons": [
-    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/favicon.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
