--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "build": "vite build",
     "preview": "vite preview --strictPort --port 5173",
     "start": "vite preview --strictPort --port 5173",
-    "clean": "rimraf dist .vercel/output || true"
+    "clean": "rimraf dist .vercel/output || true",
+    "qa": "node ./scripts/qa.js"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "rimraf": "^5.0.5"
   }
 }
