--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,37 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "jsx": "react-jsx",
-    "strict": false,
     "skipLibCheck": true,
-    "baseUrl": "src",
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
+      "@/*": [
+        "src/*"
+      ],
       "components/*": [
-        "components/*"
-      ],
-      "guards/*": [
-        "guards/*"
-      ],
-      "logic/*": [
-        "logic/*"
+        "src/components/*"
       ],
       "styles/*": [
-        "styles/*"
+        "src/styles/*"
+      ],
+      "logic/*": [
+        "src/logic/*"
       ]
-    },
-    "types": [
-      "vite/client"
-    ]
+    }
   },
   "include": [
-    "src"
+    "src",
+    "vite.config.ts"
   ]
 }
-
-
-
