--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "afw-frontend",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "engines": {
     "node": ">=22 <23"
@@ -10,22 +10,21 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --strictPort --port 5173",
-    "start": "vite preview --strictPort --port 5173",
-    "clean": "rimraf dist .vercel/output || true",
-    "qa": "node ./scripts/qa.js"
+    "clean": "rimraf dist .vite .vercel/output 2>NUL || true",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.26.2"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5",
-    "vite-tsconfig-paths": "^5.0.1",
-    "rimraf": "^5.0.5"
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "rimraf": "6.0.1",
+    "typescript": "5.5.4",
+    "vite": "5.3.5",
+    "vite-tsconfig-paths": "5.0.1"
   }
 }
