--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,10 +28,10 @@
       "logic/*": [
         "src/logic/*"
       ]
-    }
+    },
+    "strict": true
   },
   "include": [
-    "src",
-    "vite.config.ts"
+    "src"
   ]
 }
