--- a/package.json
+++ b/package.json
@@ -2,29 +2,25 @@
   "name": "afw-frontend",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "engines": {
     "node": ">=22 <23"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --strictPort --port 5173",
-    "clean": "rimraf dist .vite .vercel/output 2>NUL || true",
-    "typecheck": "tsc --noEmit"
+    "preview": "vite preview --strictPort --port 5173"
   },
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.26.2"
+    "react-router-dom": "6.30.1"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
-    "rimraf": "6.0.1",
-    "typescript": "5.5.4",
+    "typescript": "5.9.2",
     "vite": "5.3.5",
-    "vite-tsconfig-paths": "5.0.1"
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
