--- a/admin/package.json
+++ b/admin/package.json
@@ -1,22 +1,26 @@
 {
   "name": "afw-admin",
   "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.45.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "vite": "^5.3.5",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
