--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "afw-frontend",
-  "version": "1.0.0",
+  "name": "afw",
   "private": true,
+  "type": "module",
+  "version": "1.0.0",
+  "description": "Authentic From Within \u2014 sacred, cinematic, therapeutic SPA",
   "engines": {
-    "node": ">=22 <23"
+    "node": ">=22"
   },
+  "workspaces": [
+    "admin"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --strictPort --port 5173"
+    "build": "vite build && npm run build -w admin",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "6.30.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@vitejs/plugin-react": "4.3.1",
-    "typescript": "5.9.2",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "5.1.4"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
