--- a/admin/package.json
+++ b/admin/package.json
@@ -1,26 +1,22 @@
-{
+﻿{
   "name": "afw-admin",
   "private": true,
-  "type": "module",
   "version": "1.0.0",
-  "engines": {
-    "node": ">=22"
-  },
+  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.config.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --config vite.config.ts --port 5174"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2",
-    "vite-tsconfig-paths": "^5.0.1"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.19"
   }
 }
