--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
-  "version": 2,
-  "installCommand": "npm ci",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "version": 3,
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/admin(?:/.*)?",
-      "dest": "/admin/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "handle": "filesystem" },
+    { "src": "^/admin(?:/.*)?$", "dest": "/admin/index.html" },
+    { "src": ".*", "dest": "/index.html" }
   ]
 }
